ipad pro white space fix

--- a/scss/_body-related.scss
+++ b/scss/_body-related.scss
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   height: 100%;
+  background-color: #04142d;
   font-family: 'Orbitron';
   background-image: url("/images/bg-2.jpg");
   background-repeat: no-repeat;
